gitops/infra/onprem/proxy/medfish/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: onprem-proxy
  labels:
    app: radarr
spec:
 ports:
  - protocol: TCP
    name: http
    port: 7878
---
apiVersion: v1
kind: Endpoints
metadata:
  name: radarr
  namespace: onprem-proxy
subsets: 
- addresses:
  - ip: 10.0.1.1
  ports:
  - port: 7878
