gitops/infra/onprem/proxy/medfish/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: onprem-proxy
spec:
  ingressClassName: nginx-internal
  rules:
  - host: radarr.int.konst.fish
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
